@@ -1,3 +1,5 @@
+* Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]
+
 * Add `instance` argument to fuse.Fusebox() allowing a custom object to be used as the base which sandboxed natives are attached to. [jddalton]
 
 * Make the constructor's prototype values of the OBJECT__PROTO__ branch conform to ECMA specifications. [jddalton]
